# custom-mem0

./: .dockerignore  .env.example  .env.pgvector  .env.qdrant  .example.env  .gitignore  Makefile  README.md  main.py  pyproject.toml
Docker/: Dockerfile  docker-compose.dev.yaml  docker-compose.qdrant.yaml  docker-compose.yaml
scripts/: backup-monitor.sh  deploy-production.sh
src/app/: main.py
src/app/memory/: __init__.py  memory.py
src/config/: __init__.py  config.py
tests/: test_config.py
